loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:9: error: ')' expected but '}' found.
}
^